# kalshi

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
config/: __init__.py  settings.py  strategy_params.py
src/: __init__.py
src/api/: __init__.py  client.py  mock_client.py  mock_clients.py  models.py  rate_limiter.py  rest_client.py  websocket_client.py
src/auth/: __init__.py  kalshi_auth.py
src/execution/: __init__.py  execution_engine.py  order_manager.py
src/models/: __init__.py  market.py  order.py  orderbook.py  position.py
src/portfolio/: __init__.py  position_tracker.py  risk_manager.py
src/scanner/: __init__.py  market_scanner.py  opportunity.py  spread_analyzer.py
src/utils/: logger.py
tests/: __init__.py  conftest.py  test_api_models.py  test_auth.py  test_execution_engine.py  test_market_scanner.py  test_models.py  test_opportunity.py  test_order_manager.py  test_position_tracker.py  test_rate_limiter.py  test_rest_client.py  test_risk_manager.py  test_spread_analyzer.py  test_websocket_client.py
